--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -4,7 +4,9 @@ $website-width: 1280px;
 $main-color: #08971b;
 $light-color: #f4f4f4;
 $dark-color: #333;
-$medium-color: #ccc;
+$secondary-color: rgb(151, 118, 75);
+// $medium-color: #ccc;
+$medium-color: #539b5c;
 $bg-image: url('../img/showcase2 copy.jpg');
 
 // showcase 2 <span>Photo by <a href="https://unsplash.com/@blocks?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">blocks</a> on <a href="https://unsplash.com/s/photos/technology?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
