--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -2,7 +2,7 @@
   max-width: $website-width;
   padding: 0 1.5rem;
   margin: auto;
-  overflow: hidden; 
+  overflow: hidden;
 }
 
 // Buttons
@@ -20,7 +20,7 @@
     color: #333;
     background-color: $main-color;
   }
-  
+
   &-light {
     @extend %btn-shared;
     color: #333;
@@ -37,7 +37,8 @@
 button[class^='btn-']:hover,
 a[class^='btn-']:hover,
 input[class^='btn-']:hover {
-  background-color: $main-color;
+  background-color: $medium-color;
+  color: $light-color;
 }
 
 .lead {
@@ -85,6 +86,36 @@ input[class^='btn-']:hover {
   }
 }
 
+.pt {
+  &-1 {
+    padding-top: 0.5rem;
+  }
+  &-2 {
+    padding-top: 2rem;
+  }
+  &-3 {
+    padding-top: 3rem;
+  }
+  &-4 {
+    padding-top: 4rem;
+  }
+}
+
+.pb {
+  &-1 {
+    padding-bottom: 1rem;
+  }
+  &-2 {
+    padding-bottom: 2rem;
+  }
+  &-3 {
+    padding-bottom: 3rem;
+  }
+  &-4 {
+    padding-bottom: 4rem;
+  }
+}
+
 // Margin
 .my {
   &-1 {
@@ -116,4 +147,8 @@ input[class^='btn-']:hover {
   background: $main-color;
   display: block;
   margin: 0 auto 1rem auto;
+}
+
+.main-font {
+  color: $main-color;
 }
