--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,7 +24,9 @@ ul {
   list-style: none;
 }
 
-h2, h3, h4 {
+h2,
+h3,
+h4 {
   text-transform: uppercase;
 }
 
@@ -72,7 +74,7 @@ img {
   }
 }
 
-// Header 
+// Header
 #header {
   // Header Home
   &-home {
@@ -172,7 +174,7 @@ img {
         line-height: 15px;
         padding: 1rem;
         transition: all 1s;
-      } 
+      }
 
       // process-icon
       &-icon {
@@ -188,7 +190,7 @@ img {
         transition: all 1s;
 
         &:hover {
-          background: $main-color;
+          background: $medium-color;
           width: 90px;
           height: 90px;
           line-height: 90px;
@@ -200,6 +202,9 @@ img {
         }
       }
     }
+    a {
+      color: $main-color;
+    }
   }
 }
 
@@ -209,7 +214,7 @@ img {
   &-a {
     .about-info {
       display: grid;
-      grid-template-areas: 
+      grid-template-areas:
         'bioimage bio bio'
         'aw1 aw2 aw3';
       grid-gap: 1.2rem;
@@ -228,7 +233,7 @@ img {
     .award-1 {
       grid-area: aw1;
     }
-    
+
     .award-2 {
       grid-area: aw2;
     }
@@ -243,7 +248,6 @@ img {
       color: $main-color;
       margin: 1rem;
     }
-
   }
 
   // About B
@@ -313,7 +317,7 @@ img {
   &-a {
     .text-fields {
       display: grid;
-      grid-template-areas: 
+      grid-template-areas:
         'name email'
         'subject phone'
         'message message';
@@ -378,7 +382,8 @@ img {
     height: 5rem;
     align-items: center;
 
-    .social .fab {
+    .social .fab,
+    .social .fas {
       margin-right: 1rem;
       border: 2px #fff solid;
       border-radius: 50%;
@@ -387,6 +392,7 @@ img {
       line-height: 20px;
       text-align: center;
       padding: 0.5rem;
+      color: $light-color;
 
       &:hover {
         background: $main-color;
