--- a/scss/_item_grid.scss
+++ b/scss/_item_grid.scss
@@ -1,13 +1,14 @@
 .items {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  box-shadow: 0 5px 10px 0 rgba(0,0,0, 0.3);
+  grid-gap: 1.2rem;
 }
 
 .item {
   position: relative;
-  background: $main-color;
+  background: $medium-color;
   overflow: hidden;
+  box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.3);
 
   &::after {
     content: '';
@@ -73,7 +74,7 @@
     z-index: 1;
     color: #fff;
     transform: translateY(-20%);
-    transition: opacity 500ms cubic-bezier(0.2, 1, 0.3, 1), 
+    transition: opacity 500ms cubic-bezier(0.2, 1, 0.3, 1),
       transform 500ms cubic-bezier(0.2, 1, 0.3, 1);
     transition-delay: 400ms;
   }
@@ -86,15 +87,23 @@
   }
 
   &-text-title {
-    font-size: 2rem;
-    padding: 0 1rem;
-    margin: 5px 0 0 0;
+    font-size: 1.7rem;
+    color: $light-color;
   }
 
-  &-text-category {
+  &-text-desc {
+    color: $light-color;
+    padding-bottom: 2rem;
+  }
+
+  &-text-link {
+    color: $light-color;
+  }
+
+  &-text-icon {
     text-transform: uppercase;
     font-size: 1.2rem;
-    opacity: 0.7;
+    color: $light-color;
     margin: 0;
   }
 }
