--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -192,6 +192,21 @@ input[class^='btn-']:hover {
   }
 }
 
+.mb {
+  &-1 {
+    margin-bottom: 1rem;
+  }
+  &-2 {
+    margin-bottom: 2rem;
+  }
+  &-3 {
+    margin-bottom: 3rem;
+  }
+  &-4 {
+    margin-bottom: 4rem;
+  }
+}
+
 .section-title {
   font-size: 2rem;
   display: block;
