Contact Page: Changed bg color / Home Page: fixed responsiveness on #home-c .process section

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -38,7 +38,7 @@
   // Stack grid columns
   #home-a .specials,
   #home-b .stats,
-  // #home-c .process,
+  #home-c .process,
   #about-d .testimonials,
   #contact-b .contact-info,
   #work-a .items {
