--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -21,12 +21,24 @@
   }
   #header {
     &-home {
-      height: 10rem;
+      height: 25rem;
       border-bottom: 3px solid $main-color;
       background-position: 20% 30%;
 
       .header-content {
-        display: none;
+        h1 {
+          font-size: 2rem;
+        }
+        h2 {
+          font-size: 1.5rem;
+          min-height: 3.5rem;
+        }
+        p {
+          font-size: 1rem;
+        }
+        a {
+          display: none;
+        }
       }
     }
 
