Work.html: Added mobile only text for each work item

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -110,6 +110,14 @@
     }
   }
 
+  #work-a {
+    .mobile-item-text,
+    .mobile-item-links,
+    hr {
+      display: block;
+    }
+  }
+
   // Contact
   #contact {
     &-a {
